--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,18 @@ dependencies {
     */
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    /*
+    * 2024.05.16 by ojy
+    * security, jwt, validation
+    */
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.5.4'
+    implementation group: 'com.auth0', name: 'java-jwt', version:'3.10.3'
+    implementation 'com.auth0:java-jwt:4.0.0'
+//    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+//    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+//    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
