--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     * mysql, h2
     */
     runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+//<<<<<<< HEAD
     /*
     * 2024.05.16 by ojy
     * security, jwt, validation
@@ -53,6 +54,11 @@ dependencies {
 //    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 //    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+//=======
+//
+//    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//
+//>>>>>>> d0931bb ([Feat] Api 연결 및 데이터 받아오기)
 }
 
 tasks.named('test') {
