--- a/build.gradle
+++ b/build.gradle
@@ -50,15 +50,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.5.4'
     implementation group: 'com.auth0', name: 'java-jwt', version:'3.10.3'
     implementation 'com.auth0:java-jwt:4.0.0'
-//    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-//    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-//    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 //=======
 //
 //    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 //
 //>>>>>>> d0931bb ([Feat] Api 연결 및 데이터 받아오기)
+    /*
+    * 2024.05.30 by ojy
+    * aws
+    */
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
