--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,12 @@ dependencies {
     */
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    /*
+    * 2024.06.28 by ojy
+    * json
+    */
+    implementation 'org.json:json:20210307'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
