--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,11 @@ dependencies {
     */
     implementation 'org.json:json:20210307'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    /*
+    * 2024.07.06 by ojy
+    * swagger
+    */
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
 tasks.named('test') {
