--- a/build.gradle
+++ b/build.gradle
@@ -70,9 +70,11 @@ dependencies {
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     /*
     * 2024.07.06 by ojy
-    * swagger
+    * swagger, mail
     */
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
+    implementation 'com.sun.mail:jakarta.mail:2.0.1'
 }
 
 tasks.named('test') {
