--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,12 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
     implementation 'com.sun.mail:jakarta.mail:2.0.1'
 
+
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.24.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.24.0'
+
+    implementation 'org.jsoup:jsoup:1.18.1'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
