[Fix] ec2 배포를 위한 설정

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
